test/signal/negative/observer_dispose_checked_negative.ml
module Observer_error = struct
  type t = |

  let pp _ppf (value : t) = match value with _ -> .
end

module Signal = Eta_signal.Make (Observer_error) ()

let _must_not_typecheck observer =
  Signal.Observer.dispose_checked observer
